--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div>Hello TEmpo</div>
-	<div>Hello TEmpo</div>
-	<div>Hello TEmpo</div>
-	<div>Hello TEmpo</div>
+	<nav>
+		
+		<div id="logo" class="left"><img src="images/karma-logo.svg" alt="karma-clone-logo"></div>
+		<div id="menu-item" class="right">
+			<ul>
+				<li><a href="#" class="active">Meet Karma</a></li>
+				<li><a href="#">How it Works</a></li>
+				<li><a href="#">Store</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Help</a></li>
+				<li><a href="#">Login</a></li>
+			</ul>
+		</div>
+
+		<div class="clear"></div>
+
+		
+
+	</nav>
 </body>
 </html>
