--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<nav>
-		
-		<div id="logo" class="left"><img src="images/karma-logo.svg" alt="karma-clone-logo"></div>
-		<div id="menu-item" class="right">
-			<ul>
+	<nav class="top-navigation">
+		<div class="content">
+			<ul class="links">
 				<li><a href="#" class="active">Meet Karma</a></li>
 				<li><a href="#">How it Works</a></li>
 				<li><a href="#">Store</a></li>
@@ -19,12 +17,20 @@
 				<li><a href="#">Help</a></li>
 				<li><a href="#">Login</a></li>
 			</ul>
+			<img src="images/karma-logo.svg" alt="Logo Company">
 		</div>
-
-		<div class="clear"></div>
-
-		
-
 	</nav>
+	<section class="introduction">
+		<div>
+			<img src="images/images1.jpg" alt="main page">
+		</div>
+		<div id="main-div" class="introduction-div content">
+			<h1>Introducing Karma</h1>
+			<h3>Bring WIFI with you, everywhere you go.</h3>
+			<div>
+				<button>Learn More</button>
+			</div>
+		</div>
+	</section>	
 </body>
 </html>
