--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
 		</div>
 	</section>	
 
-	
+	<section class="cases">
+		<div class="content">
+			<h2>Everyone needs a little Karma.</h2>
+		</div>
+		<div class="device">
+			<img src="images/device.png" alt="device">
+			<h4>Internet for all devices</h4>
+		</div>
+		<div class="device">
+			<img src="images/icon-coffee copy.svg" alt="coffee">
+			<h4>Boost your productivity</h4>
+		</div>
+		<div class="device">
+			<img src="images/icon-refill copy.svg" alt="refill">
+			<h4>Pay as You Go</h4>
+		</div>
+	</section>
+
 </body>
 </html>
