--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
 <body>
 	<nav class="top-navigation">
@@ -47,6 +48,24 @@
 			<h4>Pay as You Go</h4>
 		</div>
 	</section>
+
+	<footer>
+		<p>Join us on</p>
+		<ul class="icons">
+			<li class="twitter">
+				<i class="fa fa-twitter"></i>
+			</li>
+			<li class="facebook">
+				<i class="fa fa-facebook"></i>
+			</li>
+			<li class="instagram">
+				<i class="fa fa-instagram"></i>
+			</li>
+		</ul>
+		<span class="copy">
+			&copy; Karma Mobility, Inc.
+		</span>
+	</footer>
 
 </body>
 </html>
