--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="shortcut icon" type="image/x-icon"  href="images/favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
