--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Karma</title>
 	<link rel="shortcut icon" type="image/x-icon"  href="images/favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
